Fix map height on mobile

--- a/src/layouts/list-map/_style.scss
+++ b/src/layouts/list-map/_style.scss
@@ -305,7 +305,7 @@
     }
 
     .layout-content-map {
-      height: calc(100vh - #{$rheader-height-small} - 109px);
+      height: calc(100vh - #{$rheader-height-small} - 129px);
     }
   }
 }
