--- a/src/modules/block-search-filters-mobile/_style.scss
+++ b/src/modules/block-search-filters-mobile/_style.scss
@@ -1,8 +1,9 @@
 .block-search-filters-mobile {
   display: none;
-  padding: 0 15px 15px;
+  padding: 0 15px;
 
   button {
+    margin-bottom: 10px;
 
     &.filterButton {
       margin-right: 10px;
